[package]
name = "logbar"
version = "0.1.0"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2018"
description = "Log-friendly progress bar"
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = ["progressbar", "progress", "pb", "logging"]
repository = "https://github.com/a-maier/logbar"

[dependencies]
